kubernetes/api-backend.yaml
# the kubernetes yaml for a deployment running the image cosmtrek/air
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend-deployment
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
       — name: backend
         image: cosmtrek/air
         workingDir: /go/src/github.com/johncave/podinate/
         ports:
           —containerPort: 8080
