kubernetes/atlas-util.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: atlas
  namespace: podinate
  labels:
    app: atlas
spec:
  selector:
    matchLabels:
      app: atlas
  template:
    metadata:
      labels:
        app: atlas
    spec:
      containers:
        - name: atlas
          image: arigaio/atlas:latest-alpine
          command: [ "sleep", "9999999999" ]
          # args: [ "while true; do sleep 30; done;" ]
