kubernetes/atlas.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: atlas
  namespace: podinate
  labels:
    app: atlas
spec:
  selector:
    matchLabels:
      app: atlas
  template:
    metadata:
      labels:
        app: atlas
    spec:
      containers:
        - name: atlas
          image: arigaio/atlas:latest-alpine
          # this is a utility container
          # See the make postgres-migrate target in the Makefile
          command: [
            "sleep", "9999999999999"
          ]
          volumeMounts:
            - name: migration-script
              mountPath: /migrations

      volumes:
        - name: migration-script
          configMap:
            name: migration-script
            items:
              - key: migration.sh
                path: migration.sh
            defaultMode: 0777
