kubernetes/controller-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinate-controller
  namespace: podinate
  labels:
    app: podinate-controller
spec:
  selector:
    matchLabels:
      app: podinate-controller
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: podinate-controller
    spec:
      containers:
        - name: backend
          image: cosmtrek/air
          imagePullPolicy: Always
          command: ["/go/bin/air", "-d"]
          workingDir: /go/src/github.com/johncave/podinate/api-backend
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: podinate-controller-config
              mountPath: /etc/config
      serviceAccountName: podinate-controller-deployment-manager
      volumes:
        - name: podinate-controller-config
          configMap:
            name: podinate-controller-config
            items:
              - key: config.toml
                path: config.toml
