kubernetes/goerd-util.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: goerd
  namespace: podinate
  labels:
    app: goerd
spec:
  selector:
    matchLabels:
      app: goerd
  template:
    metadata:
      labels:
        app: goerd
    spec:
      containers:
        - name: goerd
          image: golang:1.22
          command: [ "/bin/bash", "-c", "--" ]
          args: [ "while true; do sleep 30; done;" ]
          volumeMounts:
            - name: goerd-migration-script
              mountPath: /migrations
      volumes:
        - name: goerd-migration-script
          configMap:
            name: goerd-migration-script
            items:
              - key: migration.sh
                path: migration.sh
            defaultMode: 0777
