kubernetes/goerd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goerd
  namespace: podinate
spec:
  containers:
    - name: goerd
      image: golang:1.22
      command: [ "/bin/bash", "-c", "--" ]
      args: [ "while true; do sleep 30; done;" ]
