kubernetes/controller.yaml
# the kubernetes yaml for a deployment running the image cosmtrek/air
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: podinate
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinate-controller
  namespace: podinate
  labels:
    app: podinate-controller
spec:
  selector:
    matchLabels:
      app: podinate-controller
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: podinate-controller
    spec:
      containers:
        - name: backend
          image: ghcr.io/podinate/controller
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: podinate-controller-config
              mountPath: /etc/config
      serviceAccountName: podinate-controller-deployment-manager
      volumes:
        - name: podinate-controller-config
          configMap:
            name: podinate-controller-config
            items:
              - key: config.toml
                path: config.toml
      
      
    

---
apiVersion: v1
kind: Service
metadata:
  name: podinate-controller
  namespace: podinate 
  labels:
    app: podinate-controller
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 31443
      name: podinate-controller
  selector:
    app: podinate-controller
